--- a/package.json
+++ b/package.json
@@ -2,34 +2,41 @@
   "name": "discount-calculator",
   "version": "0.0.0",
   "scripts": {
+    "start:prod": "node server.js",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.5",
+    "@angular/cli": "^10.1.7",
     "@angular/common": "~10.1.5",
     "@angular/compiler": "~10.1.5",
+    "@angular/compiler-cli": "^10.1.6",
     "@angular/core": "~10.1.5",
     "@angular/forms": "~10.1.5",
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "bootstrap": "^4.5.3",
+    "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.6",
-    "@angular/cli": "~10.1.6",
-    "@angular/compiler-cli": "~10.1.5",
-    "@types/node": "^12.11.1",
+    "@angular/cli": "^10.1.7",
+    "@angular/compiler-cli": "^10.1.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
